package de.uniluebeck.itm.wisebed.cmdlineclient.protobuf;

message Envelope {

  enum BodyType {
    MESSAGE = 1;
    REQUEST_STATUS = 2;
    SECRET_RESERVATION_KEYS = 3;
  }

  required BodyType body_type = 1;

  optional Message message = 2;
  optional RequestStatus requestStatus = 3;
  optional SecretReservationKeys secretReservationKeys = 4;

}

message SecretReservationKeys {

  message SecretReservationKey {
    required string urn_prefix = 1;
    required string key = 2;
  }

  repeated SecretReservationKey keys = 1;
}

message Message {

  enum Type {
    NODE_BINARY = 1;
    BACKEND = 2;
  }

  message NodeBinary {
    required string source_node_urn = 1;
    required bytes data = 2;
    repeated string destination_node_urns = 3;
  }

  message Backend {
    required string text = 2;
  }

  required Type type = 1;
  required string timestamp = 2;
  optional NodeBinary node_binary = 3;
  optional Backend backend = 4;
}

message RequestStatus {

  message Status {
    required string node_urn = 1;
    required int32 value = 2;
    optional string message = 3;
  }

  required string request_id = 1;
  repeated Status status = 2;

}
